--- a/packages/zoo/tsconfig.lib.json
+++ b/packages/zoo/tsconfig.lib.json
@@ -18,11 +18,14 @@
   ],
   "references": [
     {
-      "path": "../animals/tsconfig.lib.json"
-    },
-    {
       "path": "../names/tsconfig.lib.json"
     },
+    {
+      "path": "../util/tsconfig.lib.json"
+    },
+    {
+      "path": "../animals/tsconfig.lib.json"
+    }
   ],
   "exclude": [
     "dist",
