--- a/nx.json
+++ b/nx.json
@@ -34,5 +34,13 @@
       }
     }
   ],
-  "nxCloudId": "678121908a70f077d7a8b534"
+  "nxCloudId": "678121908a70f077d7a8b534",
+  "namedInputs": {
+    "sharedGlobals": [
+      "{workspaceRoot}/.github/workflows/ci.yml"
+    ],
+    "default": [
+      "sharedGlobals"
+    ]
+  }
 }
